[UPDATE] Services layout issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ body {
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -232,6 +233,7 @@ main {
   height: auto;
   width: 100%;
   padding: 4rem 0rem 2rem;
+  overflow-x: hidden;
 }
 
 .services-heading {
